Add "sideEffects" prop to package.json

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "files": [
     "/dist"
   ],
+  "sideEffects": false,
   "scripts": {
     "build": "microbundle",
     "dev": "microbundle watch",
