--- a/package.json
+++ b/package.json
@@ -20,25 +20,25 @@
     "test": "npm run build && jest --verbose"
   },
   "peerDependencies": {
-    "react": "^16.8.0"
+    "react": ">=16.8.0"
   },
   "dependencies": {
     "lodash.debounce": "^4.0.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.1",
-    "@babel/preset-env": "^7.11.0",
-    "@babel/preset-react": "^7.10.4",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
     "@types/lodash.debounce": "^4.0.6",
-    "@types/react": "^16.9.44",
-    "babel-jest": "^26.2.2",
+    "@types/react": "^16.14.2",
+    "babel-jest": "^26.6.3",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "jest": "^26.2.2",
-    "microbundle": "^0.12.3",
-    "prettier": "^2.0.5",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "jest": "^26.6.3",
+    "microbundle": "^0.12.4",
+    "prettier": "^2.2.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "typescript": "^3.9.7"
   },
   "keywords": [
