--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.1",
   "description": "A React hook for using window orientation.",
   "author": "Ty Mick <ty@tymick.me> (https://tymick.me)",
-  "repository": "github:tywmick/use-window-orientation",
+  "repository": "https://github.com/tywmick/use-window-orientation.git",
   "license": "Apache-2.0",
   "source": "src/index.ts",
   "main": "dist/index.js",
